--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
+    "@netlify/functions": "^5.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
